adding validation base exception

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -2,7 +2,7 @@ GTEST_DIR = ../../googletest
 
 USER_DIR = ..
 
-TESTS = TableCell_spec IntegerParser_spec numberTextUtils_spec StringObject_spec
+TESTS = TableCell_spec IntegerParser_spec numberTextUtils_spec StringObject_spec ValidationException_spec
 
 all : $(TESTS)
 
@@ -95,6 +95,8 @@ StringObject_spec : $(USER_DIR)/String/StringObject/StringObject.h gtest_main.a 
 $(eval $(call spec,TableCell))
 
 $(eval $(call specInDir,Parser,IntegerParser,numberTextUtils.o BasicString.o))
+
+$(eval $(call specInDir,Parser,ValidationException))
 
 $(eval $(call specInDir,utils,numberTextUtils))	
 
