--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "cstddef": "cpp"
+        "cstddef": "cpp",
+        "array": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp",
+        "sstream": "cpp"
     }
 }
