--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -4,6 +4,7 @@
         "array": "cpp",
         "initializer_list": "cpp",
         "utility": "cpp",
-        "sstream": "cpp"
+        "sstream": "cpp",
+        "ostream": "cpp"
     }
 }
