--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -5,6 +5,9 @@
         "initializer_list": "cpp",
         "utility": "cpp",
         "sstream": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "system_error": "cpp",
+        "type_traits": "cpp",
+        "tuple": "cpp"
     }
 }
