refactoring TypeParsers unit tests and adding more

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -8,6 +8,8 @@
         "ostream": "cpp",
         "system_error": "cpp",
         "type_traits": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "exception": "cpp",
+        "limits": "cpp"
     }
 }
