--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -4,9 +4,11 @@ USER_DIR = ..
 
 TESTS = TableCell_spec ConstString_spec FixedSizeString_spec ValidationException_spec numberTextUtils_spec IntegerExtractor_spec IntegerParser_spec
 
-all : $(TESTS)
+.PHONY: all clean test
 
-clean :
+all: $(TESTS)
+
+clean:
 	rm -f $(TESTS) gtest.a gtest_main.a *.o *.gc* *.info -R coverage
 
 GTEST_INCLUDE = $(GTEST_DIR)/include
@@ -39,27 +41,27 @@ unitDeps = $(ownDeps) $(specDeps)
 
 objDeps = $(1).o $(1)_spec.o
 
-dirDeps = $(USER_DIR)/$(1)/$(2)/$(2).h $(USER_DIR)/$(1)/$(2)/$(2).cc $(specDeps)
+dirDeps = $(USER_DIR)/$(1)/$(2)/$(2).h $(USER_DIR)/$(1)/$(2)/$(2).cc
 
 define spec
-$(1).o : $(call unitDeps,$(1)) $(2)
+$(1).o: $(call unitDeps,$(1)) $(2)
 	$(COMPILE_COMPONENT)/$(1)/$(1).cc $(COVER)
 
-$(1)_spec.o : $(call unitDeps,$(1)) $(2)
+$(1)_spec.o: $(call unitDeps,$(1)) $(2)
 	$(COMPILE_COMPONENT)/$(1)/$(1)_spec.cc
 
-$(1)_spec : $(call objDeps,$(1)) gtest_main.a It.o $(2)
+$(1)_spec: $(call objDeps,$(1)) gtest_main.a It.o $(2)
 	$(COMPILER) $(COVER) -lpthread $$^ -o $$@
 endef
 
 define specInDir
-$(2).o : $(call dirDeps,$(1),$(2)) $(3)
+$(2).o: $(call dirDeps,$(1),$(2)) $(3)
 	$(COMPILE_COMPONENT)/$(1)/$(2)/$(2).cc $(COVER)
 
-$(2)_spec.o : $(call dirDeps,$(1),$(2)) $(3)
+$(2)_spec.o: $(call dirDeps,$(1),$(2)) $(specDeps) $(3)
 	$(COMPILE_COMPONENT)/$(1)/$(2)/$(2)_spec.cc
 
-$(2)_spec : $(call objDeps,$(2)) gtest_main.a It.o $(3)
+$(2)_spec: $(call objDeps,$(2)) gtest_main.a It.o $(3)
 	$(COMPILER) $(COVER) -lpthread $$^ -o $$@
 endef
 
@@ -68,28 +70,28 @@ define endl
 
 endef
 
-gtest-all.o : $(GTEST_SRCS_)
+gtest-all.o: $(GTEST_SRCS_)
 	$(COMPILE_GTEST)/gtest-all.cc
 
-gtest_main.o : $(GTEST_SRCS_)
+gtest_main.o: $(GTEST_SRCS_)
 	$(COMPILE_GTEST)/gtest_main.cc
 
-gtest.a : gtest-all.o
+gtest.a: gtest-all.o
 	$(AR_GTEST)
 
-gtest_main.a : gtest-all.o gtest_main.o
+gtest_main.a: gtest-all.o gtest_main.o
 	$(AR_GTEST)
 
 It.o: $(call ownDeps,It)
 	$(COMPILE_COMPONENT)/It/It.cc
 
-BasicString.o : $(USER_DIR)/String/ImmutableString.h $(USER_DIR)/String/BasicString/BasicString.h $(USER_DIR)/String/BasicString/BasicString.cc $(specDeps)
+BasicString.o: $(USER_DIR)/String/ImmutableString.h $(USER_DIR)/String/BasicString/BasicString.h $(USER_DIR)/String/BasicString/BasicString.cc $(specDeps)
 	$(COMPILE_COMPONENT)/String/BasicString/BasicString.cc $(COVER)
 
-ConstString_spec.o : $(USER_DIR)/String/ImmutableString.h $(USER_DIR)/String/BasicString/BasicString.h $(USER_DIR)/String/BasicString/BasicString.cc $(specDeps)
+ConstString_spec.o: $(USER_DIR)/String/ImmutableString.h $(USER_DIR)/String/BasicString/BasicString.h $(USER_DIR)/String/BasicString/BasicString.cc $(specDeps)
 	$(COMPILE_COMPONENT)/String/ConstString/ConstString_spec.cc
 
-ConstString_spec : $(USER_DIR)/String/ConstString/ConstString.h gtest_main.a It.o BasicString.o ConstString_spec.o
+ConstString_spec: $(USER_DIR)/String/ConstString/ConstString.h gtest_main.a It.o BasicString.o ConstString_spec.o
 	$(COMPILER) $(COVER) -lpthread $^ -o $@
 
 $(eval $(call specInDir,String,FixedSizeString,BasicString.o))
@@ -110,9 +112,7 @@ $(eval $(call specInDir,Parser,numberTextUtils,BasicString.o ValidationException
 
 $(eval $(call specInDir,Parser,IntegerExtractor,numberTextUtils.o BasicString.o ValidationException.o))	
 
-test :
-	$(MAKE) clean
-	$(MAKE)
+test: all
 	$(LCOV_CURR_DIR) --zerocounters
 	$(foreach test,$(TESTS),./$(test) --gtest_color=yes$(endl))
 	$(LCOV_CURR_DIR) --capture -o test.info
