implementing division and power operators

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -44,6 +44,8 @@
         "new": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "cmath": "cpp",
+        "cfenv": "cpp"
     }
 }
