--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -2,7 +2,7 @@ GTEST_DIR = ../../googletest
 
 USER_DIR = ..
 
-TESTS = ConstString_spec #FixedSizeString_spec ValidationException_spec Number_spec NumberParser_spec\
+TESTS = ConstString_spec FixedSizeString_spec ValidationException_spec Number_spec NumberParser_spec\
 StringParser_spec TableCell_spec
 
 .PHONY: all clean test
@@ -96,15 +96,15 @@ $(eval $(call spec,Number,NumberHelper.o))
 
 $(eval $(call specInDir,String,ConstString,BasicString.o))
 
-$(eval $(call specInDir,String,FixedSizeString,BasicString.o))
+$(eval $(call specInDir,String,FixedSizeString,BasicString.o ConstString.o))
 
 $(eval $(call spec,TableCell))
 
 $(eval $(call specInDir,Parser,TypeParser,BasicString.o ValidationException.o))
 
-$(eval $(call specInDir,Parser,NumberParser,BasicString.o TypeParser.o ValidationException.o Number.o NumberHelper.o))
+$(eval $(call specInDir,Parser,NumberParser,BasicString.o ConstString.o TypeParser.o ValidationException.o Number.o NumberHelper.o))
 
-$(eval $(call specInDir,Parser,StringParser,BasicString.o FixedSizeString.o TypeParser.o ValidationException.o))
+$(eval $(call specInDir,Parser,StringParser,BasicString.o ConstString.o FixedSizeString.o TypeParser.o ValidationException.o))
 
 $(eval $(call specInDir,Parser,ValidationException))	
 
