adding depencies setup scripts and copyright notice for external dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,10 @@
 *.out
 *.app
 
-#googletest/mock
-googletest
-googlemock
+#dependencies
+dependencies/googletest
+dependencies/googlemock
+dependencies/fpconv
 
 #gcov
 *.gcda
