--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -6,7 +6,7 @@ FPCONV_DIR = $(DEPS_DIR)/fpconv/src
 
 USER_DIR = ..
 
-TESTS = NumberCell_spec StringNumberCell_spec StringCell_spec #DynamicArray_spec IndexedDynamicArray_spec FragmentedDynamicArray_spec ConstString_spec FixedSizeString_spec ValidationException_spec Number_spec NumberParser_spec\
+TESTS = NumberCell_spec #DynamicArray_spec IndexedDynamicArray_spec FragmentedDynamicArray_spec ConstString_spec FixedSizeString_spec ValidationException_spec Number_spec NumberParser_spec\
 StringParser_spec NumberCell_spec StringNumberCell_spec StringCell_spec
 
 .PHONY: all clean test
@@ -129,9 +129,9 @@ $(eval $(call specInDir,Parser,StringParser,BasicString.o ConstString.o FixedSiz
 
 $(eval $(call specInDir,Parser,ValidationException))
 
-$(eval $(call specInDir,TableCell,NumberCell,Number.o))
+$(eval $(call specInDir,TableCell,NumberCell,Number.o fpconv.o))
 
-$(eval $(call specInDir,TableCell,StringNumberCell,NumberCell.o Number.o))
+$(eval $(call specInDir,TableCell,StringNumberCell,NumberCell.o Number.o fpconv.o))
 
 $(eval $(call specInDir,TableCell,StringCell,Number.o BasicString.o ConstString.o FixedSizeString.o))	
 
