adding more singleton cell classes, representing different errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "*.htd": "cpp",
-        "*.tci": "cpp"
+        "*.tci": "cpp",
+        "*.mcrs": "cpp"
     }
 }
