--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -6,10 +6,10 @@ FPCONV_DIR = $(DEPS_DIR)/fpconv/src
 
 USER_DIR = ..
 
-TESTS = Table_spec DynamicArray_spec# IndexedDynamicArray_spec FragmentedDynamicArray_spec# ConstString_spec FixedSizeString_spec ValidationException_spec Number_spec NumberParser_spec\
+TESTS = DynamicString_spec# DynamicArray_spec IndexedDynamicArray_spec FragmentedDynamicArray_spec# ConstString_spec FixedSizeString_spec ValidationException_spec Number_spec NumberParser_spec\
 StringParser_spec NumberCell_spec StringNumberCell_spec StringCell_spec EmptyCell_spec ErrorCell_spec CircRefCell_spec DivByZeroCell_spec RootOfNegNumCell_spec ZeroRaisedOnZeroCell_spec
 
-TESTS = TableCellParser_spec# NumberCell_spec StringNumberCell_spec StringCell_spec EmptyCell_spec ErrorCell_spec CircRefCell_spec DivByZeroCell_spec RootOfNegNumCell_spec ZeroRaisedOnZeroCell_spec
+#TESTS = TableCellParser_spec# NumberCell_spec StringNumberCell_spec StringCell_spec EmptyCell_spec ErrorCell_spec CircRefCell_spec DivByZeroCell_spec RootOfNegNumCell_spec ZeroRaisedOnZeroCell_spec
 
 .PHONY: all clean test
 
@@ -125,6 +125,8 @@ $(eval $(call spec,Number))
 $(eval $(call specInDir,String,ConstString,BasicString.o))
 
 $(eval $(call specInDir,String,FixedSizeString,BasicString.o ConstString.o))
+
+$(eval $(call specInDir,String,DynamicString,BasicString.o ConstString.o))
 
 $(eval $(call specInDir,Parser,TypeParser,BasicString.o ValidationException.o))
 
